# Moo.FuckScreenConnect-rs

./: .gitignore  Cargo.toml  README.md  build.ps1  install.ps1
fsc_common/: Cargo.toml  build.rs
fsc_common/src/logging/: mod.rs
fsc_core/: Cargo.toml  build.rs
fsc_core/src/: main.rs
fsc_core/src/process_state/: mod.rs
fsc_core/src/service/: mod.rs
fsc_service/: Cargo.toml  build.rs
fsc_service/src/: main.rs
fuck_screen_connect/: Cargo.toml  build.rs
fuck_screen_connect/src/: main.rs
fuck_screen_connect/src/process_state/: mod.rs
fuck_screen_connect/src/service/: mod.rs
fuck_screen_connect_service/: Cargo.toml
fuck_screen_connect_service/src/: main.rs
install_modules/: external_tools.ps1  fsc_functions.ps1  logging.ps1
src/: main.rs
src/process_state/: mod.rs
src/service/: mod.rs
