[package]
name = "moo_fuck_screen_connect"
version = "0.3.2"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
ctrlc = "3.4"
simplelog = "0.12"
log = "0.4"
anyhow = "1.0"

[dependencies.windows]
version = "0.57.0"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_Security_Authentication_Identity",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_ProcessStatus",
	"Win32_System_Services",
	"Win32_System_StationsAndDesktops",
	"Win32_System_Threading"]

[build-dependencies]
embed-manifest = "1.4"
winresource = "0.1"