[package]
name = "fsc_common"
version = "0.4.0-beta3"
edition = "2024"

[dependencies]
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ["formatting"] }

[dependencies.windows]
version = "0.61"
features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"]

[build-dependencies]
static_vcruntime = "2.0"