[package]
name = "fsc_core"
version = "0.4.0-pre4"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = "4.5"
ctrlc = "3.4"
log = "0.4"
once_cell = "1.19.0"
simplelog = "0.12"

fsc_common = { path = "../fsc_common" }

[dependencies.windows]
version = "0.61.1"
features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_Security_Authentication_Identity",
	"Win32_System",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_ProcessStatus",
	"Win32_System_Services",
	"Win32_System_StationsAndDesktops",
	"Win32_UI_WindowsAndMessaging"]

[build-dependencies]
embed-manifest = "1.4"
winresource = "0.1"